crates/index-scheduler/src/scheduler/snapshots/test_document_addition.rs/test_document_addition_with_bad_primary_key/documents.snap
---
source: crates/index-scheduler/src/scheduler/test_document_addition.rs
snapshot_kind: text
---
[
  {
    "id": 2,
    "doggo": "jean bob"
  },
  {
    "id": 4,
    "doggo": "jean bob"
  }
]
